Fix dark mode colors by using Bootstrap media-query mode

--- a/src/styles/optimized.scss
+++ b/src/styles/optimized.scss
@@ -10,7 +10,7 @@ $blue: #337ab7;
 $enable-shadows: true;
 $enable-gradients: true;
 $tooltip-max-width: 350px;
-$color-mode-type: media-query;
+$color-mode-type: "media-query";
 
 // Content container padding (matches grid gutter / 2)
 $content-padding-x: 15px;
